<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">InstaBus</string>
    <string name="app_logo_alt">App logo</string>

    <!-- Toolbar -->
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_refresh">Refresh</string>
    <string name="toolbar_share_button">Share</string>

    <!-- Login / Register -->
    <string name="auth_login_title">Log in</string>
    <string name="auth_register_title">Register</string>
    <string name="auth_username">Username</string>
    <string name="auth_email">E-mail</string>
    <string name="auth_password">Password</string>
    <string name="auth_confirm_password">Confirm password</string>
    <string name="auth_login_btn">Log in</string>
    <string name="auth_register_btn">Register</string>
    <string name="auth_login_link"><u>Already signed in ?</u></string>
    <string name="auth_register_link"><u>I do not have an account</u></string>
    <string name="auth_err_empty_username">Please enter a valid username.</string>
    <string name="auth_err_too_long_username">Username must not exceed 32 characters.</string>
    <string name="auth_err_empty_email">Please enter a valid email.</string>
    <string name="auth_err_empty_password">Please enter a valid password.</string>
    <string name="auth_err_password_match">Passwords do not match.</string>
    <string name="auth_err_unknown_login">Unknown error while logging in. Please try later.</string>
    <string name="auth_err_unknown_register">Unknown error while registering your account. Please try later.</string>

    <!-- Main activity -->
    <string name="get_stations_error">Could not get bus stations. Try again later.</string>
    <string name="perms_refused_positive_btn">OK</string>
    <string name="back_to_top_btn">Back to top</string>

    <!-- Bottom nav bar -->
    <string name="bottom_nav_bar_home">Home</string>
    <string name="bottom_nav_bar_stations">Stations</string>
    <string name="bottom_nav_bar_user">Your page</string>

    <!-- Post -->
    <string name="post_title_placeholder">Post title</string>
    <string name="post_creation_date_placeholder">01/01/1970</string>
    <string name="post_image_alt">Post image</string>
    <string name="post_username_placeholder">Username</string>
    <string name="post_like_icon_alt">Like icon</string>
    <string name="post_likes_count_placeholder">0</string>
    <string name="post_view_station_btn">View station</string>
    <string name="post_delete_btn_alt">Delete</string>
    <string name="post_delete_confirm_title">Confirmation</string>
    <string name="post_delete_confirm">Are you sure to delete this post ?</string>
    <string name="post_delete_confirm__yes_btn">Yes</string>
    <string name="post_delete_confirm__no_btn">No</string>
    <string name="post_delete_error_title">Error while deleting post</string>
    <string name="post_delete_error">Unable to delete the selected post. Please retry later</string>
    <string name="post_delete_error_btn">OK</string>

    <!-- Date -->
    <string name="date_format">%1$s ago</string>
    <string name="date_year">%1$s year</string>
    <string name="date_years">%1$s years</string>
    <string name="date_month">%1$s month</string>
    <string name="date_months">%1$s months</string>
    <string name="date_week">%1$s week</string>
    <string name="date_weeks">%1$s weeks</string>
    <string name="date_day">%1$s day</string>
    <string name="date_days">%1$s days</string>
    <string name="date_hour">%1$s hour</string>
    <string name="date_hours">%1$s hours</string>
    <string name="date_minute">%1$s minute</string>
    <string name="date_minutes">%1$s minutes</string>
    <string name="date_second">%1$s second</string>
    <string name="date_seconds">%1$s seconds</string>

    <!-- Station -->
    <string name="tabs_stations_map">Map</string>
    <string name="tabs_stations_list">List</string>
    <string name="map_permission_refused_title">Location permission refused</string>
    <string name="map_permission_refused">The app cannot show stations on the map if you refuse the permission. Use the list instead or change it in Settings > App > %1$s</string>
    <string name="station_name_placeholder">Station name</string>
    <string name="station_street_name_placeholder">Address</string>
    <string name="station_city_placeholder">City</string>
    <string name="station_buses_placeholder">Buses:</string>
    <string name="station_distance_placeholder">Distance: 0m</string>
    <string name="station_info">Click for more info</string>
    <string name="station_concat_name">Station n°%1$d</string>
    <string name="station_concat_buses">Buses: %1$s</string>
    <string name="station_concat_distance">Distance: %1$sm</string>
    <string name="map_info_window_arrow_alt">here</string>
    <string name="map_info_window_info_alt">Info: </string>
    <string name="station_add_post_alt">+</string>

    <!-- User page -->
    <string name="user_page_picture_alt">User picture</string>
    <string name="user_page_username_placeholder">Username</string>
    <string name="user_page_posts_count_title">Posts</string>
    <string name="user_page_posts_count_number">0</string>
    <string name="user_page_likes_count_title">Likes</string>
    <string name="user_page_likes_count_number">0</string>

    <!-- Camera -->
    <string name="cam_button_alt">Camera button</string>
    <string name="cam_actionbar_title">Add post</string>
    <string name="cam_permission_refused_title">Camera permission refused</string>
    <string name="cam_permission_refused">The app cannot use the camera if you refuse the permission. You can change it in Settings > App > %1$s</string>
    <string name="cam_start_error">Could not start the camera</string>
    <string name="cam_start_preview_error">Could not start the camera preview</string>
    <string name="cam_file_not_found_error">Could not create the photo file</string>
    <string name="cam_file_access_denied_error">Could not access the photo file</string>
    <string name="cam_image_capture_error">Could not take photo</string>
    <string name="cam_unknown_error">Unknown error. Unable to take photo</string>
    <string name="cam_add_post_error_title">Error while adding post</string>
    <string name="cam_add_post_error">Can\'t add your post right now. Try later or contact us at contact@instabus.com</string>
    <string name="cam_add_post_error_positive_btn">OK</string>

    <!-- Camera add picture -->
    <string name="add_pic_title">Add picture</string>
    <string name="add_pic_edit_text_placeholder">Picture title</string>
    <string name="add_pic_btn">Add</string>

    <!-- Preference Titles -->
    <string name="settings_toolbar_title">Settings</string>
    <string name="interface_header">Interface</string>
    <string name="account_header">Account</string>

    <!-- Interface Preferences -->
    <string name="theme_title">Theme</string>
    <string name="theme_entries_light">Light</string>
    <string name="theme_entries_dark">Dark</string>
    <string name="theme_entries_system_default">System default</string>

    <string name="better_ui_title">Simplified interface</string>
    <string name="better_ui_summary_off">Makes the interface easier to use but bigger on the screen.</string>
    <string name="better_ui_summary_on">Makes the interface minimized and simplified (recommended).</string>

    <!-- Account Preferences -->
    <string name="log_out_title">Log out</string>
    <string name="log_out_summary">Connected as %1$s</string>
</resources>