<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:paddingHorizontal="20dp">

    <!-- Station info -->
    <TextView
        android:id="@+id/station_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/station_name_placeholder"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/station_street_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/station_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/station_street_name_placeholder"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/station_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/station_street_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/station_city_placeholder"
        android:textSize="12sp"/>

    <!-- See station button -->
    <ImageButton
        android:id="@+id/view_station_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_details_24px"
        android:contentDescription="@string/post_view_station_btn"
        android:tint="@color/btn_text_color"
        app:backgroundTint="@color/green_500"/>

</androidx.constraintlayout.widget.ConstraintLayout>