<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:paddingVertical="5dp"
    android:orientation="vertical">

    <!-- Post info -->
    <TextView
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/post_title_placeholder"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:maxLines="2"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/post_creation_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/post_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/post_creation_date_placeholder"
        android:textSize="12sp"
        android:textColor="@color/grey"/>

    <!-- Picture -->
    <com.eddp.instabus.views.PictureHolder
        android:id="@+id/post_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/post_creation_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/white_but_not_exactly"/>

    <!-- Username (+ station) -->
    <TextView
        android:id="@+id/post_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/post_img"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/post_username_placeholder"/>

    <!-- Likes & View station -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/post_author"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/post_likes_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:drawableLeftCompat="@drawable/ic_favorite_border_24px"
            android:drawablePadding="5dp"
            android:text="@string/post_likes_count_placeholder"/>

        <Button
            android:id="@+id/post_view_station_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/post_view_station_btn"
            android:textColor="@color/btn_text_color"
            android:textSize="12sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>