<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="@color/drawer_bg">

    <!-- Station picture -->
    <ImageView
        android:id="@+id/drawer_station_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:0.5"
        android:scaleType="centerCrop"
        android:background="@color/somehow_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/post_image_alt"/>

    <!-- Station header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/drawer_station_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/drawer_station_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <!-- Name and count -->
        <TextView
            android:id="@+id/drawer_station_name"
            android:tag="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/station_name_placeholder"
            android:textStyle="bold"
            android:textColor="@color/deep_orange_700"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/drawer_station_pics_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/drawer_station_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/drawer_station_name"
            app:drawableLeftCompat="@drawable/ic_insert_photo_24px"
            app:drawableTint="@color/icon_tint"
            android:drawablePadding="5dp"
            android:text="@string/post_likes_count_placeholder"/>

        <!-- Address and city -->
        <TextView
            android:id="@+id/drawer_station_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/drawer_station_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/station_street_name_placeholder"/>

        <TextView
            android:id="@+id/drawer_station_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/drawer_station_address"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/station_city_placeholder"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- User pics -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/drawer_user_pic_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        android:paddingBottom="70dp"
        app:layout_constraintTop_toBottomOf="@id/drawer_station_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:clipToPadding="false"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/drawer_user_pic_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/drawer_user_pic_recycler_view"
        app:layout_constraintRight_toRightOf="@id/drawer_user_pic_recycler_view"
        app:layout_constraintBottom_toBottomOf="@id/drawer_user_pic_recycler_view"
        app:layout_constraintLeft_toLeftOf="@id/drawer_user_pic_recycler_view"
        android:indeterminate="true"
        android:visibility="visible"/>

    <!-- Add button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/drawer_take_picture_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_add_24px"
        app:tint="@color/btn_text_color"
        android:contentDescription="@string/station_add_post_alt"/>

</androidx.constraintlayout.widget.ConstraintLayout>