<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPage">

    <!-- User info header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_page_profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:background="@color/white_but_not_exactly"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_page_picture_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/user_page_profile_header"
            app:layout_constraintTop_toTopOf="@id/user_page_profile_header">

            <ImageView
                android:id="@+id/user_page_picture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/user_page_picture_alt"
                android:scaleType="centerCrop"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/user_page_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/user_page_username_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/user_page_picture_container"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/user_page_posts_count_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_page_likes_count_box"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_page_posts_count_title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_page_posts_count_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_page_posts_count_number"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_page_likes_count_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_page_likes_count_title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_page_likes_count_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_page_likes_count_number"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- User pics -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_page_pics_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        android:paddingBottom="70dp"
        app:layout_constraintTop_toBottomOf="@id/user_page_profile_header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipToPadding="false"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/user_page_pics_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/user_page_pics_recycler_view"
        app:layout_constraintRight_toRightOf="@id/user_page_pics_recycler_view"
        app:layout_constraintBottom_toBottomOf="@id/user_page_pics_recycler_view"
        app:layout_constraintLeft_toLeftOf="@id/user_page_pics_recycler_view"
        android:indeterminate="true"
        android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>