<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPicture">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <!-- Title -->
        <TextView
            android:id="@+id/add_picture_fragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/add_pic_title"
            android:textColor="@color/deep_orange_700"
            android:textStyle="bold"/>

        <!-- Picture -->
        <ImageView
            android:id="@+id/new_img_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintTop_toBottomOf="@id/add_picture_fragment_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            android:background="@color/white_but_not_exactly"
            android:contentDescription="@string/post_image_alt"
            android:scaleType="centerCrop"/>

        <!-- Title input -->
        <EditText
            android:id="@+id/add_picture_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/new_img_container"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:inputType="textMultiLine"
            android:hint="@string/add_pic_edit_text_placeholder"
            android:maxLength="255"
            app:backgroundTint="@color/icon_tint"/>

        <!-- Add button -->
        <Button
            android:id="@+id/add_picture_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/add_picture_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/add_pic_btn"
            android:textColor="@color/btn_text_color"/>

        <ProgressBar
            android:id="@+id/add_picture_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/add_picture_btn"
            app:layout_constraintRight_toRightOf="@id/add_picture_btn"
            app:layout_constraintLeft_toLeftOf="@id/add_picture_btn"
            app:layout_constraintBottom_toBottomOf="@id/add_picture_btn"
            android:indeterminate="true"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>