<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp">

    <!-- Post info -->
    <TextView
        android:id="@+id/user_pic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/post_title_placeholder"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:maxLines="1"
        android:ellipsize="end"/>

    <!-- Picture -->
    <com.eddp.instabus.views.PictureHolder
        android:id="@+id/user_pic_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_pic_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginVertical="5dp"
        android:background="@color/white_but_not_exactly"/>

    <!-- Likes & Delete pic -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/user_pic_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/user_pic_likes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:drawableLeftCompat="@drawable/ic_favorite_border_24px"
            android:drawablePadding="5dp"
            app:drawableTint="@color/icon_tint"
            android:text="@string/post_likes_count_placeholder"/>

        <ImageButton
            android:id="@+id/user_pic_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_delete_forever_24px"
            android:contentDescription="@string/post_delete_btn_alt"
            android:tint="@drawable/border_only_button_tint"
            android:background="@drawable/border_only_button"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>